--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: paul.j.fenwick
+title: ermarsgherd
 ---
 
 <article class="is-post">
@@ -9,17 +9,11 @@ title: paul.j.fenwick
 
     <header>
         <h2>{{ page.title }}</h2>
-        <span class="byline">Some guy from the internet who loves freedom.</span>
+        <span class="byline">I'm going to Mars.</span>
+        <p>
+        Ange Chin: Food nerd, writer, adventurer, and total badass.
+        </p>
     </header>
-
-    <p>Welcome to my home on the internet! Everything here is free
-    under the Creative Commons Attribution 3.0 license unless marked
-    otherwise.</p>
-
-    <p>This site contains various pieces of writing across my various
-    interests, and spanning several years. You can
-    <a href="https://github.com/pjf/pjf.github.io">fork this site
-    on github</a> if you wish.</p>
 
 </article>
 
